src/Base/main/default/objects/Lead/fields/Accepted_On__c.field-meta.xml
<CustomField>
    <fullName>Accepted_On__c</fullName>
    <description>The date/time the owner was changed from queue to a user</description>
    <label>Accepted On</label>
    <type>DateTime</type>
</CustomField>