src/Base/main/default/objects/Lead/fields/Average_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>Average_Page_Views__c</fullName>
    <description>Average number of web pages viewed by lead</description>
    <label>Average Page Views</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>