src/Base/main/default/objects/Lead/fields/Closest_Partner__c.field-meta.xml
<CustomField>
    <fullName>Closest_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Closest Partner to the Lead</description>
    <label>Closest Partner</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Closest Partner must be a Dealer</errorMessage>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Dealer</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Leads</relationshipLabel>
    <relationshipName>ClosestLeads</relationshipName>
    <type>Lookup</type>
</CustomField>