src/Base/main/default/objects/Lead/fields/conversionProcess__c.field-meta.xml
<CustomField>
    <fullName>conversionProcess__c</fullName>
    <defaultValue>true</defaultValue>
    <description>This is simply a field that maps to the opportunity so I cam programically tell if the opportunity was created through the lead process</description>
    <label>conversionProcess</label>
    <type>Checkbox</type>
</CustomField>