src/Base/main/default/objects/Lead/fields/convertNow__c.field-meta.xml
<CustomField>
    <fullName>convertNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>convertNow</label>
    <type>Checkbox</type>
</CustomField>