src/Base/main/default/objects/Lead/fields/deleteNow__c.field-meta.xml
<CustomField>
    <fullName>deleteNow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>deleteNow</label>
    <type>Checkbox</type>
</CustomField>