src/Base/main/default/objects/Lead/fields/Do_you_currently_own__c.field-meta.xml
<CustomField>
    <fullName>Do_you_currently_own__c</fullName>
    <description>field to determine whether customer currently owns a boat or whether they have in the past</description>
    <label>Do you currently own</label>
    <length>100</length>
    <type>Text</type>
</CustomField>