src/Base/main/default/objects/Lead/fields/Field_of_Study__c.field-meta.xml
<CustomField>
    <fullName>Field_of_Study__c</fullName>
    <label>Field of Study</label>
    <length>255</length>
    <type>Text</type>
</CustomField>