src/Base/main/default/objects/Lead/fields/hubpot_Currently_previously_owned_boat__c.field-meta.xml
<CustomField>
    <fullName>hubpot_Currently_previously_owned_boat__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Actual field name in Hubspot:

&quot;Do you currently own a boat or have you owned a boat in the past?&quot;</description>
    <label>Currently or previously owned a boat?</label>
    <type>Checkbox</type>
</CustomField>