src/Base/main/default/objects/Lead/fields/hubpot_email_domain_registration__c.field-meta.xml
<CustomField>
    <fullName>hubpot_email_domain_registration__c</fullName>
    <description>Actual field name in hubspot:

&quot;Domain to which regirstration email was sent&quot;</description>
    <label>Domain where registration email was sent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>