src/Base/main/default/objects/Lead/fields/hubspot_Agree_to_Legend_Communications__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Agree_to_Legend_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Actual Field in Hubspot:

I agree to receive Legend Boats communications including contests and promtions regarding Legend Boats products. you can unsubscribe at any time.</description>
    <label>Agree to recive Legend Communications</label>
    <type>Checkbox</type>
</CustomField>