src/Base/main/default/objects/Lead/fields/hubspot_Average_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Average_Page_Views__c</fullName>
    <label>Average Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>