src/Base/main/default/objects/Lead/fields/hubspot_Became_a_Customer_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Became_a_Customer_Date__c</fullName>
    <label>Became a Customer Date</label>
    <type>DateTime</type>
</CustomField>