src/Base/main/default/objects/Lead/fields/hubspot_Became_a_Sales_Qualified_Lead__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Became_a_Sales_Qualified_Lead__c</fullName>
    <label>Became a Sales Qualified Lead</label>
    <type>DateTime</type>
</CustomField>