src/Base/main/default/objects/Lead/fields/hubspot_Became_an_Opportunity_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Became_an_Opportunity_Date__c</fullName>
    <label>Became an Opportunity Date</label>
    <type>DateTime</type>
</CustomField>