src/Base/main/default/objects/Lead/fields/hubspot_Became_an_Other_Lifecycle_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Became_an_Other_Lifecycle_Date__c</fullName>
    <label>Became an Other Lifecycle Date</label>
    <type>DateTime</type>
</CustomField>