src/Base/main/default/objects/Lead/fields/hubspot_Boat_Insurer__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Boat_Insurer__c</fullName>
    <label>Boat Insurer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>