src/Base/main/default/objects/Lead/fields/hubspot_Boat_Model_Lead__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Boat_Model_Lead__c</fullName>
    <label>Boat Model Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>