src/Base/main/default/objects/Lead/fields/hubspot_boat_pontoon_interests__c.field-meta.xml
<CustomField>
    <fullName>hubspot_boat_pontoon_interests__c</fullName>
    <description>Actual Hubspot Name:

Which boat or pontoon are you interested in?</description>
    <label>Which boat or pontoon interests you?</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>