src/Base/main/default/objects/Lead/fields/hubspot_Boat_Pontoon_Length_ft__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Boat_Pontoon_Length_ft__c</fullName>
    <label>Boat/Pontoon Length (ft)</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>