src/Base/main/default/objects/Lead/fields/hubspot_boat_pontoon_serial_number__c.field-meta.xml
<CustomField>
    <fullName>hubspot_boat_pontoon_serial_number__c</fullName>
    <label>Boat/Pontoon Serial #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>