src/Base/main/default/objects/Lead/fields/hubspot_change_enjoy_models__c.field-meta.xml
<CustomField>
    <fullName>hubspot_change_enjoy_models__c</fullName>
    <description>Hubspot name:

What should we change on the Enjoy Models?</description>
    <label>What should we change on Enjoy Models?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>