src/Base/main/default/objects/Lead/fields/hubspot_Check_in_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Check_in_Date__c</fullName>
    <label>Check-In Date</label>
    <type>Date</type>
</CustomField>