src/Base/main/default/objects/Lead/fields/hubspot_click_for_info_letter__c.field-meta.xml
<CustomField>
    <fullName>hubspot_click_for_info_letter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cliquez ici pour vous abonner à l&apos;info-l</label>
    <type>Checkbox</type>
</CustomField>