src/Base/main/default/objects/Lead/fields/hubspot_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Close_Date__c</fullName>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>