src/Base/main/default/objects/Lead/fields/hubspot_Company_Size__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Company_Size__c</fullName>
    <label>Company Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>