src/Base/main/default/objects/Lead/fields/hubspot_Create_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Create_Date__c</fullName>
    <label>Create Date</label>
    <type>Date</type>
</CustomField>