src/Base/main/default/objects/Lead/fields/hubspot_Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>