src/Base/main/default/objects/Lead/fields/hubspot_Date_of_Birth__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Date_of_Birth__c</fullName>
    <label>Date of Birth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>