src/Base/main/default/objects/Lead/fields/hubspot_Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Days_to_Close__c</fullName>
    <label>Days to Close</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>