src/Base/main/default/objects/Lead/fields/hubspot_Dealer__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Dealer__c</fullName>
    <label>Dealer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>