src/Base/main/default/objects/Lead/fields/hubspot_Dealer_Info__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Dealer_Info__c</fullName>
    <label>Dealer Info</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>