src/Base/main/default/objects/Lead/fields/hubspot_Degree__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Degree__c</fullName>
    <label>Degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>