src/Base/main/default/objects/Lead/fields/hubspot_Email_Address_Quarantined__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Email_Address_Quarantined__c</fullName>
    <label>Email Address Quarantined</label>
    <length>255</length>
    <type>Text</type>
</CustomField>