src/Base/main/default/objects/Lead/fields/hubspot_Event_Revenue__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Event_Revenue__c</fullName>
    <label>Event Revenue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>