src/Base/main/default/objects/Lead/fields/hubspot_First_Conversion__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Conversion__c</fullName>
    <label>First Conversion</label>
    <length>255</length>
    <type>Text</type>
</CustomField>