src/Base/main/default/objects/Lead/fields/hubspot_First_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Conversion_Date__c</fullName>
    <label>First Conversion Date</label>
    <type>DateTime</type>
</CustomField>