src/Base/main/default/objects/Lead/fields/hubspot_First_Deal_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Deal_Created_Date__c</fullName>
    <label>First Deal Created Date</label>
    <type>Date</type>
</CustomField>