src/Base/main/default/objects/Lead/fields/hubspot_First_Marketing_Email_Click_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Marketing_Email_Click_Date__c</fullName>
    <label>First Marketing Email Click Date</label>
    <type>Date</type>
</CustomField>