src/Base/main/default/objects/Lead/fields/hubspot_First_Page_Seen__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Page_Seen__c</fullName>
    <label>First Page Seen</label>
    <length>18000</length>
    <type>LongTextArea</type>
</CustomField>