src/Base/main/default/objects/Lead/fields/hubspot_First_Referring_Site__c.field-meta.xml
<CustomField>
    <fullName>hubspot_First_Referring_Site__c</fullName>
    <label>First Referring Site</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>