src/Base/main/default/objects/Lead/fields/hubspot_Follower_Count__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Follower_Count__c</fullName>
    <label>Follower Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>