src/Base/main/default/objects/Lead/fields/hubspot_Form_Name__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Form_Name__c</fullName>
    <label>Form Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>