src/Base/main/default/objects/Lead/fields/hubspot_Gender_lead__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Gender_lead__c</fullName>
    <label>Gender Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>