src/Base/main/default/objects/Lead/fields/hubspot_Google_Plus_Clicks__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Google_Plus_Clicks__c</fullName>
    <label>Google Plus Clicks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>