src/Base/main/default/objects/Lead/fields/hubspot_Graduation_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Graduation_Date__c</fullName>
    <label>Graduation Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>