src/Base/main/default/objects/Lead/fields/hubspot_How_Many_Engines__c.field-meta.xml
<CustomField>
    <fullName>hubspot_How_Many_Engines__c</fullName>
    <label>How Many Engines</label>
    <length>255</length>
    <type>Text</type>
</CustomField>