src/Base/main/default/objects/Lead/fields/hubspot_If_Yes_Please_Explain__c.field-meta.xml
<CustomField>
    <fullName>hubspot_If_Yes_Please_Explain__c</fullName>
    <label>If Yes, Please Explain</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>