src/Base/main/default/objects/Lead/fields/hubspot_Insurance_Policy__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Insurance_Policy__c</fullName>
    <label>Insurance Policy #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>