src/Base/main/default/objects/Lead/fields/hubspot_IP_Address__c.field-meta.xml
<CustomField>
    <fullName>hubspot_IP_Address__c</fullName>
    <label>IP Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>