src/Base/main/default/objects/Lead/fields/hubspot_IP_City_Lead__c.field-meta.xml
<CustomField>
    <fullName>hubspot_IP_City_Lead__c</fullName>
    <label>IP City Lead</label>
    <length>255</length>
    <type>Text</type>
</CustomField>