src/Base/main/default/objects/Lead/fields/hubspot_IP_Country_Code__c.field-meta.xml
<CustomField>
    <fullName>hubspot_IP_Country_Code__c</fullName>
    <label>IP Country Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>