src/Base/main/default/objects/Lead/fields/hubspot_IP_State_Region__c.field-meta.xml
<CustomField>
    <fullName>hubspot_IP_State_Region__c</fullName>
    <label>IP State/Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>