src/Base/main/default/objects/Lead/fields/hubspot_IP_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>hubspot_IP_Time_Zone__c</fullName>
    <label>IP Time Zone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>