src/Base/main/default/objects/Lead/fields/hubspot_Job_Function__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Job_Function__c</fullName>
    <label>Job Function</label>
    <length>255</length>
    <type>Text</type>
</CustomField>