src/Base/main/default/objects/Lead/fields/hubspot_Klout_Score__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Klout_Score__c</fullName>
    <label>Klout Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>