src/Base/main/default/objects/Lead/fields/hubspot_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Activity_Date__c</fullName>
    <label>Last Activity Date</label>
    <type>DateTime</type>
</CustomField>