src/Base/main/default/objects/Lead/fields/hubspot_Last_Contacted__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Contacted__c</fullName>
    <label>Last Contacted</label>
    <type>DateTime</type>
</CustomField>