src/Base/main/default/objects/Lead/fields/hubspot_Last_Meeting_Booked__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Meeting_Booked__c</fullName>
    <label>Last Meeting Booked</label>
    <type>DateTime</type>
</CustomField>