src/Base/main/default/objects/Lead/fields/hubspot_Last_Meeting_Booked_Medium__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Meeting_Booked_Medium__c</fullName>
    <label>Last Meeting Booked Medium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>