src/Base/main/default/objects/Lead/fields/hubspot_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Modified_Date__c</fullName>
    <label>Last Modified Date Lead</label>
    <type>DateTime</type>
</CustomField>