src/Base/main/default/objects/Lead/fields/hubspot_Last_Touch_Converting_Campagin__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Last_Touch_Converting_Campagin__c</fullName>
    <label>Last Touch Converting Campagin</label>
    <length>255</length>
    <type>Text</type>
</CustomField>