src/Base/main/default/objects/Lead/fields/hubspot_Legal_Processing_Contact_Data__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Legal_Processing_Contact_Data__c</fullName>
    <description>Actual Field name in Hubspot:

Legal Basis for Processing Contact&apos;s Data</description>
    <label>Legal Basis for Processing Contact Data</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Legitimate Interest - Prospect/Lead</fullName>
            </value>
            <value>
                <fullName>Legitimate Interest - Existing customer</fullName>
            </value>
            <value>
                <fullName>Legitimate Interest - Other</fullName>
            </value>
            <value>
                <fullName>Performance of a Contract</fullName>
            </value>
            <value>
                <fullName>Freely Given Consent form a Contract</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>