src/Base/main/default/objects/Lead/fields/hubspot_Legend_Blog_Email_Subscription__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Legend_Blog_Email_Subscription__c</fullName>
    <label>Legend Boats Blog Email Subscription</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Instant</fullName>
            </value>
            <value>
                <fullName>Daily</fullName>
            </value>
            <value>
                <fullName>Weekly</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>