src/Base/main/default/objects/Lead/fields/hubspot_linkedin_bio__c.field-meta.xml
<CustomField>
    <fullName>hubspot_linkedin_bio__c</fullName>
    <label>LinkedIn Bio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>