src/Base/main/default/objects/Lead/fields/hubspot_LinkedIn_Connections__c.field-meta.xml
<CustomField>
    <fullName>hubspot_LinkedIn_Connections__c</fullName>
    <label>LinkedIn Connections</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>