src/Base/main/default/objects/Lead/fields/hubspot_Marital_Status__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Marital_Status__c</fullName>
    <label>Marital Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>