src/Base/main/default/objects/Lead/fields/hubspot_Marketing_Email_Conf_Status__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Marketing_Email_Conf_Status__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Marketing Email Confirmation Status</label>
    <type>Checkbox</type>
</CustomField>