src/Base/main/default/objects/Lead/fields/hubspot_Marketing_Emails_Delivered__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Marketing_Emails_Delivered__c</fullName>
    <label>Marketing Emails Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>