src/Base/main/default/objects/Lead/fields/hubspot_Membership_Notes__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Membership_Notes__c</fullName>
    <label>Membership Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>