src/Base/main/default/objects/Lead/fields/hubspot_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Mobile_Phone__c</fullName>
    <label>Mobile Phone Lead</label>
    <type>Phone</type>
</CustomField>