src/Base/main/default/objects/Lead/fields/hubspot_Mobile_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Mobile_Phone_Number__c</fullName>
    <label>Mobile Phone Number</label>
    <type>Phone</type>
</CustomField>