src/Base/main/default/objects/Lead/fields/hubspot_model_of_vibe__c.field-meta.xml
<CustomField>
    <fullName>hubspot_model_of_vibe__c</fullName>
    <description>Actual name in Hubspot:

What model of VIBE are you interested in?</description>
    <label>What model of Vibe interests you?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vibe D19</fullName>
            </value>
            <value>
                <fullName>Vibe D20</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>