src/Base/main/default/objects/Lead/fields/hubspot_Most_Recent_Social_Click__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Most_Recent_Social_Click__c</fullName>
    <label>Most Recent Social Click</label>
    <length>255</length>
    <type>Text</type>
</CustomField>