src/Base/main/default/objects/Lead/fields/hubspot_Name__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Name__c</fullName>
    <label>Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>