src/Base/main/default/objects/Lead/fields/hubspot_Names_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Names_of_Participants__c</fullName>
    <label>Names of Participants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>