src/Base/main/default/objects/Lead/fields/hubspot_Nearest_Dealer_to_Prospect_Addy__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Nearest_Dealer_to_Prospect_Addy__c</fullName>
    <label>Nearest Dealer to Prospect Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>