src/Base/main/default/objects/Lead/fields/hubspot_Nearest_Dealer_to_Prspct_Phn_Num__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Nearest_Dealer_to_Prspct_Phn_Num__c</fullName>
    <label>Nearest Dealer to Prospect Phone Number</label>
    <type>Phone</type>
</CustomField>