src/Base/main/default/objects/Lead/fields/hubspot_Nom_de_Famille__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Nom_de_Famille__c</fullName>
    <label>Nom de Famille</label>
    <type>TextArea</type>
</CustomField>