src/Base/main/default/objects/Lead/fields/hubspot_Now_in_Workflow__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Now_in_Workflow__c</fullName>
    <label>Now in Workflow</label>
    <length>255</length>
    <type>Text</type>
</CustomField>