src/Base/main/default/objects/Lead/fields/hubspot_Num_of_Unique_Form_Submissions__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Num_of_Unique_Form_Submissions__c</fullName>
    <label>Number of Unique Form Submissions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>