src/Base/main/default/objects/Lead/fields/hubspot_Number_of_Form_Submissions__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Number_of_Form_Submissions__c</fullName>
    <label>Number of Form Submissions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>