src/Base/main/default/objects/Lead/fields/hubspot_Number_of_Page_Views__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Number_of_Page_Views__c</fullName>
    <label>Number of Page Views</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>