src/Base/main/default/objects/Lead/fields/hubspot_Number_of_Participants__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Number_of_Participants__c</fullName>
    <label>Number of Participants</label>
    <length>255</length>
    <type>Text</type>
</CustomField>