src/Base/main/default/objects/Lead/fields/hubspot_Number_of_Sales_Activities__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Number_of_Sales_Activities__c</fullName>
    <label>Number of Sales Activities</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>