src/Base/main/default/objects/Lead/fields/hubspot_Opted_Out_Email_Blog_Subscrptn__c.field-meta.xml
<CustomField>
    <fullName>hubspot_Opted_Out_Email_Blog_Subscrptn__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opted Out of Email: Blog Subscription</label>
    <type>Checkbox</type>
</CustomField>